--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -300,6 +300,10 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Add.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\IsSwitchedOff32x32.png" />
+    <Resource Include="Resources\Images\IsSwitchedOn32x32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
