--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -133,6 +133,7 @@
     <Compile Include="RibbonEx.cs" />
     <Compile Include="ShellWindowViewModel.cs" />
     <Compile Include="ConventionBasedViewNameResolver.cs" />
+    <Compile Include="UserActivationException.cs" />
     <Page Include="ShellWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
