--- a/Shared/Shared.Patient/Shared.Patient.csproj
+++ b/Shared/Shared.Patient/Shared.Patient.csproj
@@ -156,7 +156,9 @@
     <Compile Include="Model\User Input Processing\Search Expression Providers\PersonMedNumberSearchExpressionProvider.cs" />
     <Compile Include="Model\User Input Processing\Search Expression Providers\PersonNamesSearchExpressionProvider.cs" />
     <Compile Include="Model\User Input Processing\Search Expression Providers\PersonSnilsSearchExpressionProvider.cs" />
+    <Compile Include="Services\Implementations\DocumentService.cs" />
     <Compile Include="Services\Implementations\PersonSearchService.cs" />
+    <Compile Include="Services\Interfaces\IDocumentService.cs" />
     <Compile Include="Services\Interfaces\IPersonSearchService.cs" />
     <Compile Include="ViewModels\FoundPersonViewModel.cs" />
     <Compile Include="ViewModels\MediaInformation.cs" />
