--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters\PermissionGroupViewModelToGroupHeaderConverter.cs" />
+    <Compile Include="Exceptions\UserWithSameSidExistsException.cs" />
     <Compile Include="Model\SaveUserInput.cs" />
     <Compile Include="Model\SecurityObjectType.cs" />
     <Compile Include="Model\UserDTO.cs" />
