--- a/Shared/Shared.Patient/Shared.Patient.csproj
+++ b/Shared/Shared.Patient/Shared.Patient.csproj
@@ -137,6 +137,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Misc\InputHelpers\SnilsInputHelper.cs" />
     <Compile Include="Misc\PersonServicesInitializer.cs" />
     <Compile Include="Converters\PatientGenderToImageSourceConverter.cs" />
     <Compile Include="Misc\CmdBehavior\ActionExecutionStrategy.cs" />
