--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Misc\Change Tracking\CompositeChangeTracker.cs" />
     <Compile Include="Misc\Change Tracking\IChangeTrackable.cs" />
     <Compile Include="Misc\Change Tracking\IChangeTrackerMediator.cs" />
+    <Compile Include="Misc\CommonIdName.cs" />
     <Compile Include="Misc\DateTimeFormats.cs" />
     <Compile Include="Misc\Change Tracking\IChangeTracker.cs" />
     <Compile Include="Misc\IHierarchyItem.cs" />
