--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="Converters\BoolToCollapsedConverter.cs" />
     <Compile Include="Converters\BoolToInvisibilityConverter.cs" />
+    <Compile Include="Converters\CommissionStatusToImageConverter.cs" />
     <Compile Include="Converters\MultiBoolToVisibilityConverter.cs" />
     <Compile Include="Converters\BoolToInversedVisibilitConverter.cs" />
     <Compile Include="Converters\CompletedToColorConverter.cs" />
