--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -88,16 +88,21 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\CommissionService.cs" />
     <Compile Include="Services\Interfaces\ICommissionService.cs" />
+    <Compile Include="ViewModels\CommissionDecisionEditorViewModel.cs" />
     <Compile Include="ViewModels\CommissionDecisionHeaderViewModel.cs" />
+    <Compile Include="ViewModels\CommissionDecisionsViewModel.cs" />
     <Compile Include="ViewModels\CommissionDecisionViewModel.cs" />
     <Compile Include="ViewModels\CommissionProtocolViewModel.cs" />
     <Compile Include="ViewModels\CommissionsHeaderViewModel.cs" />
     <Compile Include="ViewModels\CommissionsListViewModel.cs" />
+    <Compile Include="Views\CommissionDecisionEditorView.xaml.cs">
+      <DependentUpon>CommissionDecisionEditorView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CommissionDecisionHeaderView.xaml.cs">
       <DependentUpon>CommissionDecisionHeaderView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\CommissionDecisionView.xaml.cs">
-      <DependentUpon>CommissionDecisionView.xaml</DependentUpon>
+    <Compile Include="Views\CommissionDecisionsView.xaml.cs">
+      <DependentUpon>CommissionDecisionsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CommissionsHeaderView.xaml.cs">
       <DependentUpon>CommissionsHeaderView.xaml</DependentUpon>
@@ -122,6 +127,10 @@
       <Project>{cf75cde2-002c-4113-824a-03a3b7c6847b}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.DataTemplates\Shared.DataTemplates.csproj">
+      <Project>{ee5f4410-13f6-477f-8ad6-99e848234331}</Project>
+      <Name>Shared.DataTemplates</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shell.Shared\Shell.Shared.csproj">
       <Project>{4e0d997f-374e-43be-9617-8da82504b7c8}</Project>
       <Name>Shell.Shared</Name>
@@ -129,7 +138,19 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CommissionDecisionEditorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\CommissionDecisionHeaderView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CommissionDecisionsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
