--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Events\MainMenuCloseRequestedEvent.cs" />
     <Compile Include="Events\SelectionChangedEvent.cs" />
     <Compile Include="Extensions\FrameworkElementExtensions.cs" />
+    <Compile Include="Extensions\RegionExtensions.cs" />
     <Compile Include="MarkupExtensions\Int32Extension.cs" />
     <Compile Include="Misc\BeforeSelectionChangedEventData.cs" />
     <Compile Include="Misc\CommandWrapper.cs" />
