--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -307,6 +307,9 @@
     <Resource Include="Resources\Images\AmbCardPrint48x48.png" />
     <Resource Include="Resources\Images\AmbCardRemove48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\DatabaseSearch48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
