- Closes #179 - assignment list in PatientInfo and Schedule
- Added StaticDataPresenceValidator

--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Model\DatabaseValidators\ExecutionPlaceValidator.cs" />
     <Compile Include="Model\DatabaseValidators\IDatabaseValidator.cs" />
     <Compile Include="Model\DatabaseValidators\IdentityDocumentTypesValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\StaticDataPresenceValidator.cs" />
     <Compile Include="Model\SaveUserInput.cs" />
     <Compile Include="Model\SecurityObjectType.cs" />
     <Compile Include="Model\UserDTO.cs" />
