--- a/NotificationServiceConsoleHost/App.config
+++ b/NotificationServiceConsoleHost/App.config
@@ -15,12 +15,18 @@
       <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level - %message%newline" />
       </layout>
     </appender>
     <root>
       <level value="ALL" />
       <appender-ref ref="RollingFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
   <system.serviceModel>
