--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -96,6 +96,7 @@
     <Compile Include="ViewModels\ListProtocols\CommissionsListViewModel.cs" />
     <Compile Include="ViewModels\CommissionEmptyViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolHeaderViewModel.cs" />
+    <Compile Include="ViewModels\Protocols\CommissionProtocolState.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonclusionViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonductViewModel.cs" />
