Schema changed. Draft version of person talons, commissions, hospitalisations

--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="Converters\BoolToCollapsedConverter.cs" />
     <Compile Include="Converters\BoolToInvisibilityConverter.cs" />
+    <Compile Include="Converters\TalonStateToImageConverter.cs" />
     <Compile Include="Converters\CommissionStatusToImageConverter.cs" />
     <Compile Include="Converters\DateToUserFriendlyStringConverter.cs" />
     <Compile Include="Converters\IntToColorConverter.cs" />
