--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -88,12 +88,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\CommissionService.cs" />
     <Compile Include="Services\Interfaces\ICommissionService.cs" />
+    <Compile Include="ViewModels\Common\CommonViewModel.cs" />
+    <Compile Include="ViewModels\Common\PersonTalonViewModel.cs" />
+    <Compile Include="ViewModels\Common\PersonTalonsViewModel.cs" />
+    <Compile Include="ViewModels\Common\PersonCommissionsViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionEditorViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionHeaderViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionsViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionViewModel.cs" />
-    <Compile Include="ViewModels\ListProtocols\CommissionProtocolListViewModel.cs" />
-    <Compile Include="ViewModels\ListProtocols\CommissionsListViewModel.cs" />
+    <Compile Include="ViewModels\ListCommissions\CommissionItemViewModel.cs" />
+    <Compile Include="ViewModels\ListCommissions\CommissionsListViewModel.cs" />
     <Compile Include="ViewModels\CommissionEmptyViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolHeaderViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolState.cs" />
@@ -101,6 +105,12 @@
     <Compile Include="ViewModels\Protocols\CommissionСonclusionViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonductViewModel.cs" />
     <Compile Include="ViewModels\Protocols\PreliminaryProtocolViewModel.cs" />
+    <Compile Include="Views\Common\PersonCommissionsView.xaml.cs">
+      <DependentUpon>PersonCommissionsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Common\PersonHospitalisationsView.xaml.cs">
+      <DependentUpon>PersonHospitalisationsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Decisions\CommissionDecisionEditorView.xaml.cs">
       <DependentUpon>CommissionDecisionEditorView.xaml</DependentUpon>
     </Compile>
@@ -113,7 +123,7 @@
     <Compile Include="Views\Protocols\CommissionProtocolHeaderView.xaml.cs">
       <DependentUpon>CommissionProtocolHeaderView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ListProtocols\CommissionsListView.xaml.cs">
+    <Compile Include="Views\ListCommissions\CommissionsListView.xaml.cs">
       <DependentUpon>CommissionsListView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CommissionEmptyView.xaml.cs">
@@ -121,6 +131,9 @@
     </Compile>
     <Compile Include="Views\Protocols\CommissionProtocolView.xaml.cs">
       <DependentUpon>CommissionProtocolView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Common\PersonTalonsView.xaml.cs">
+      <DependentUpon>PersonTalonsView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +179,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\Common\CommonView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Common\PersonCommissionsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Common\PersonHospitalisationsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Decisions\CommissionDecisionEditorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -198,7 +223,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ListProtocols\CommissionsListView.xaml">
+    <Page Include="Views\ListCommissions\CommissionsListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -207,6 +232,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Protocols\CommissionProtocolView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Common\PersonTalonsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
