--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -82,6 +82,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="Xceed.Wpf.Toolkit, Version=2.5.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Extended.Wpf.Toolkit.2.5\lib\net40\Xceed.Wpf.Toolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Module.cs" />
@@ -89,6 +93,7 @@
     <Compile Include="Services\Implementations\CommissionService.cs" />
     <Compile Include="Services\Interfaces\ICommissionService.cs" />
     <Compile Include="ViewModels\Common\CommonViewModel.cs" />
+    <Compile Include="ViewModels\Common\CreateTalonViewModel.cs" />
     <Compile Include="ViewModels\Common\PersonTalonViewModel.cs" />
     <Compile Include="ViewModels\Common\PersonTalonsViewModel.cs" />
     <Compile Include="ViewModels\Common\PersonCommissionsViewModel.cs" />
@@ -180,6 +185,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Common\CommonView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Common\CreateTalonView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
