Schema changed. Implemented adding and removing talons.
Added some database validators

--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -121,10 +121,18 @@
     <Compile Include="Converters\UserViewModelToGroupHeaderConverter.cs" />
     <Compile Include="Converters\PermissionViewModelToGroupHeaderConverter.cs" />
     <Compile Include="Exceptions\UserWithSameSidExistsException.cs" />
+    <Compile Include="Model\DatabaseValidators\CommissionValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\AddressTypeValidator.cs" />
     <Compile Include="Model\DatabaseValidators\ExecutionPlaceValidator.cs" />
     <Compile Include="Model\DatabaseValidators\IDatabaseValidator.cs" />
     <Compile Include="Model\DatabaseValidators\IdentityDocumentTypesValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\DiagnosValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\RoomValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\RecordTypeRoleValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\RecordTypeValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\PaymentTypeValidator.cs" />
     <Compile Include="Model\DatabaseValidators\StaticDataPresenceValidator.cs" />
+    <Compile Include="Model\DatabaseValidators\RecordContractValidator.cs" />
     <Compile Include="Model\SaveUserInput.cs" />
     <Compile Include="Model\SecurityObjectType.cs" />
     <Compile Include="Model\UserDTO.cs" />
