--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -99,11 +99,13 @@
     <Compile Include="ViewModels\ListCommissions\CommissionItemViewModel.cs" />
     <Compile Include="ViewModels\ListCommissions\CommissionsListViewModel.cs" />
     <Compile Include="ViewModels\CommissionEmptyViewModel.cs" />
+    <Compile Include="ViewModels\Protocols\CommissionMemberViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolHeaderViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolState.cs" />
     <Compile Include="ViewModels\Protocols\CommissionProtocolViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonclusionViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonductViewModel.cs" />
+    <Compile Include="ViewModels\Protocols\DelegateCommand.cs" />
     <Compile Include="ViewModels\Protocols\PreliminaryProtocolViewModel.cs" />
     <Compile Include="Views\Decisions\CommissionDecisionEditorView.xaml.cs">
       <DependentUpon>CommissionDecisionEditorView.xaml</DependentUpon>
@@ -187,6 +189,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Protocols\CommissionСonclusionView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Protocols\CommissionMemberView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
